<resources>
    <string name="app_name">PhotoJOP</string>
    <string name="take_photo_text">Сделать фото</string>
    <string name="gallery_photo_text">Выбрать фото</string>
    <string name="welcome_text">Добро пожаловать! Добавьте фото</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="any_angle_text">Применить</string>
    <string name="left_text">Налево</string>
    <string name="right_text">Направо</string>
</resources>
