<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/backgroundFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RotateActivity">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="424dp"
        android:layout_height="511dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />


    <Button
        android:id="@+id/right_button"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@drawable/custom_button"
        android:layout_marginBottom="60dp"
        android:text="@string/right_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/left_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/custom_button"
        android:layout_marginBottom="60dp"
        android:text="@string/left_text" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="174dp"
        android:layout_height="46dp"
        android:layout_marginBottom="60dp"
        android:indeterminateTint="#1976D2"
        android:max="90"
        android:min="-90"
        android:progress="0"
        android:progressTint="#313435"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/right_button"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toEndOf="@+id/left_button" />

    <Button
        android:id="@+id/any_angle_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/custom_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        android:layout_width="174dp"
        android:layout_height="43dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/any_angle_text" />

    <TextView
        android:id="@+id/angle_view"
        android:layout_width="30dp"
        android:layout_height="19dp"
        android:layout_marginBottom="8dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/seekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/old_photo_button"
        android:layout_width="31dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/backgroundFragment"
        android:scaleType="centerInside"
        android:src="@drawable/krestik"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/save_image_button"
        android:layout_width="44dp"
        android:layout_height="42dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/backgroundFragment"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/normgalochka" />

</androidx.constraintlayout.widget.ConstraintLayout>